# yaak

./: .eslintrc.cjs  .prettierrc.cjs  DEVELOPMENT.md  README.md  eslint.config.cjs  package-lock.json  package.json  rustfmt.toml
.github/: FUNDING.yml
plugin-runtime-types/: package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/bindings/: analytics.ts
src-tauri/capabilities/: capabilities.json
src-tauri/macos/: entitlements.plist
src-tauri/migrations/: 20250424152740_remove-fks.sql
src-tauri/src/: analytics.rs  commands.rs  encoding.rs  error.rs  export_resources.rs  grpc.rs  history.rs  http_request.rs  import.rs  lib.rs  notifications.rs  plugin_events.rs  render.rs  tauri_plugin_mac_window.rs  template_callback.rs  updates.rs  uri_scheme.rs  window.rs  window_menu.rs
src-tauri/yaak-common/: Cargo.toml
src-tauri/yaak-common/src/: api_client.rs  error.rs  lib.rs  platform.rs  window.rs
src-tauri/yaak-crypto/: Cargo.toml  build.rs  index.ts  package.json
src-tauri/yaak-crypto/permissions/: default.toml
src-tauri/yaak-crypto/src/: commands.rs  encryption.rs  error.rs  lib.rs  manager.rs  master_key.rs  workspace_key.rs
src-tauri/yaak-fonts/: index.ts  package.json
src-tauri/yaak-fonts/src/: commands.rs
src-tauri/yaak-git/: Cargo.toml  build.rs  index.ts  package.json
src-tauri/yaak-git/bindings/: gen_git.ts  gen_models.ts
src-tauri/yaak-git/permissions/: default.toml
src-tauri/yaak-git/permissions/autogenerated/: reference.md
src-tauri/yaak-git/permissions/autogenerated/commands/: branch.toml  checkout_remote.toml  delete_branch.toml  merge_branch.toml  pull.toml  push.toml
src-tauri/yaak-git/permissions/schemas/: schema.json
src-tauri/yaak-git/src/: branch.rs  callbacks.rs  commands.rs  error.rs  fetch.rs  git.rs  lib.rs  merge.rs  pull.rs  push.rs  repository.rs  util.rs
src-tauri/yaak-grpc/: Cargo.toml
src-tauri/yaak-grpc/src/: client.rs  codec.rs  json_schema.rs  lib.rs  manager.rs  proto.rs  reflection.rs  transport.rs
src-tauri/yaak-http/: Cargo.toml
src-tauri/yaak-http/src/: lib.rs  tls.rs
src-tauri/yaak-license/: Cargo.toml  index.ts
src-tauri/yaak-license/bindings/: license.ts
src-tauri/yaak-license/permissions/: default.toml
src-tauri/yaak-license/permissions/autogenerated/: reference.md
src-tauri/yaak-license/permissions/schemas/: schema.json
src-tauri/yaak-license/src/: commands.rs  error.rs  lib.rs  license.rs
src-tauri/yaak-mac-window/: Cargo.toml  index.ts  package.json
src-tauri/yaak-mac-window/permissions/: default.toml
src-tauri/yaak-mac-window/src/: commands.rs  lib.rs  mac.rs
src-tauri/yaak-models/: Cargo.toml  build.rs  index.ts  package.json
src-tauri/yaak-models/bindings/: gen_models.ts  gen_util.ts  models.ts
src-tauri/yaak-models/guest-js/: atoms.ts  index.ts  store.ts  types.ts  util.ts
src-tauri/yaak-models/permissions/: default.toml
src-tauri/yaak-models/permissions/autogenerated/: reference.md
src-tauri/yaak-models/permissions/autogenerated/commands/: delete_model.toml  duplicate.toml  get_settings.toml  grpc_events.toml  upsert.toml  upsert_model.toml  websocket_events.toml  workspace_models.toml
src-tauri/yaak-models/permissions/schemas/: schema.json
src-tauri/yaak-models/src/: commands.rs  db_context.rs  error.rs  lib.rs  manager.rs  migrate.rs  models.rs  plugin.rs  queries.rs  queries_legacy.rs  query_manager.rs  render.rs  util.rs
src-tauri/yaak-models/src/queries/: base.rs  batch.rs  cookie_jars.rs  environments.rs  folders.rs  graphql_introspections.rs  grpc_connections.rs  grpc_events.rs  grpc_requests.rs  http_requests.rs  http_responses.rs  key_values.rs  mod.rs  plugin_key_values.rs  plugins.rs  settings.rs  sync_states.rs  websocket_connections.rs  websocket_events.rs  websocket_requests.rs  workspace_metas.rs  workspaces.rs
src-tauri/yaak-plugins/: Cargo.toml  build.rs  index.ts  package.json
src-tauri/yaak-plugins/bindings/: events.ts  gen_api.ts  gen_events.ts  gen_models.ts  gen_search.ts  models.ts
src-tauri/yaak-plugins/permissions/: default.toml
src-tauri/yaak-plugins/src/: api.rs  commands.rs  error.rs  events.rs  install.rs  lib.rs  manager.rs  native_template_functions.rs  nodejs.rs  plugin_handle.rs  plugin_meta.rs  server_ws.rs  template_callback.rs  util.rs
src-tauri/yaak-sse/: Cargo.toml
src-tauri/yaak-sync/: Cargo.toml  build.rs  index.ts
src-tauri/yaak-sync/bindings/: gen_models.ts  gen_sync.ts  gen_watch.ts  models.ts  sync.ts
src-tauri/yaak-sync/permissions/: default.toml
src-tauri/yaak-sync/permissions/autogenerated/: reference.md
src-tauri/yaak-sync/permissions/autogenerated/commands/: add.toml  apply.toml  calculate.toml  calculate_fs.toml  checkout.toml  cmd_add.toml  cmd_checkout.toml  cmd_commit.toml  cmd_init.toml  cmd_log.toml  cmd_status.toml  init_repo.toml  sync.toml  sync_fs.toml  unstage.toml
src-tauri/yaak-sync/permissions/schemas/: schema.json
src-tauri/yaak-sync/src/: commands.rs  error.rs  lib.rs  models.rs  sync.rs  watch.rs
src-tauri/yaak-templates/: Cargo.toml  index.ts  package.json
src-tauri/yaak-templates/src/: error.rs  format.rs  lib.rs  parser.rs  renderer.rs  wasm.rs
src-tauri/yaak-ws/: Cargo.toml  build.rs  index.ts  package.json
src-tauri/yaak-ws/permissions/: default.toml
src-tauri/yaak-ws/permissions/autogenerated/: reference.md
src-tauri/yaak-ws/permissions/schemas/: schema.json
src-tauri/yaak-ws/src/: cmd.rs  commands.rs  connect.rs  error.rs  lib.rs  manager.rs  render.rs  resolve.rs
src-tauri/yaak_grpc/: Cargo.toml
src-tauri/yaak_license/: Cargo.toml  build.rs  index.ts  package.json
src-tauri/yaak_license/bindings/: license.ts
src-tauri/yaak_license/permissions/schemas/: schema.json
src-tauri/yaak_license/src/: errors.rs  license.rs
src-tauri/yaak_models/: Cargo.toml
src-tauri/yaak_models/bindings/: models.ts
src-tauri/yaak_models/src/: models.rs  queries.rs
src-tauri/yaak_plugin_runtime/: Cargo.toml
src-tauri/yaak_plugin_runtime/src/: server.rs
src-tauri/yaak_sse/: Cargo.toml
src-tauri/yaak_templates/: Cargo.toml
(+503 files in other folders)
