[package]
name = "yaak-git"
links = "yaak-git"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
git2 = { version = "0.20.0", features = ["vendored-libgit2", "vendored-openssl"] }
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tauri = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true, features = ["chrono-impl", "serde-json-impl"] }
yaak-models = { workspace = true }
yaak-sync = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
