[package]
name = "yaak-license"
links = "yaak-license"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = "0.4.38"
log = "0.4.26"
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
yaak-models = { workspace = true }
yaak-common = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
