[package]
name = "yaak-mac-window"
links = "yaak-mac-window"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
hex_color = "3.0.0"
log = "0.4.27"
objc = "0.2.7"
rand = "0.9.0"

[dependencies]
tauri = { workspace = true }
