[package]
name = "yaak-sync"
links = "yaak-sync"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { workspace = true, features = ["serde"] }
hex = { workspace = true }
log = "0.4.22"
notify = "8.0.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
sha1 = "0.10.6"
tauri = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "macros"] }
ts-rs = { workspace = true, features = ["chrono-impl", "serde-json-impl"] }
yaak-models = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
