[package]
name = "yaak-ws"
links = "yaak-ws"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
futures-util = "0.3.31"
log = "0.4.20"
md5 = "0.7.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "test-util"] }
tokio-tungstenite = { version = "0.26.2", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
yaak-http = { workspace = true }
yaak-models = { workspace = true }
yaak-plugins = { workspace = true }
yaak-templates = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
